--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://192.168.100.109:15432/vendas_futebol
+      SPRING_DATASOURCE_URL: jdbc:postgresql://177.203.121.234:15432/vendas_futebol
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: Eunaoseiasenha22
     restart: unless-stopped
@@ -24,7 +24,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://localhost:8080/api
+      - VITE_API_URL=http://177.203.121.234:8080
     depends_on:
       - backend
     restart: unless-stopped 
