feat: implementa sistema completo de orçamento e viagens
- Adiciona funcionalidade de orçamento com entradas e saídas
- Implementa sistema de viagens com gastos
- Integra vendas automaticamente com orçamento
- Integra gastos de viagem automaticamente com orçamento
- Corrige cálculo de valores totais das viagens
- Melhora interface com termos mais intuitivos
- Corrige problemas de autenticação nos endpoints
- Atualiza API para funcionar sem prefixo /api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - "0.0.0.0:8084:8084"
     environment:
-      - VITE_API_URL=http://177.203.121.234:8083
+      - VITE_API_URL=http://localhost:8083
     depends_on:
       - backend
     restart: unless-stopped 
