--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
+    open-in-view: false
     properties:
       hibernate:
         format_sql: true
@@ -27,4 +28,9 @@ logging:
     com.soldiers: DEBUG
     org.springframework.security: DEBUG
     org.springframework.boot.autoconfigure.jdbc: DEBUG
-    org.springframework.jdbc.datasource.init: DEBUG 
+    org.springframework.jdbc.datasource.init: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    org.hibernate.type.descriptor.sql: TRACE
+    org.springframework.web: DEBUG
+    org.springframework.orm.jpa: DEBUG 
